Add annotations (initial implementation)
